# raja

./: .gitignore  .rale-seed-state.json  CHANGELOG.md  CLAUDE.md  RAJA_INTEGRATION_PROOF.md  README.md  poe  pyproject.toml  renovate.json  seed-config.yaml
.github/1-mvp/: 02-mvp-cdk.md  04-poe-tasks.md  05-ci-spec.md  06-raja-issues.md  09-refactoring-implementation.md
.github/workflows/: ci.yml  deploy.yml.disabled  integration.yml  integration.yml.disabled  release.yml
docs/: CEDAR_INTEGRATION_README.md  Makefile  architecture.md  cedar-admin.html  cedar-avp.md  cedar-avp.sql  cedar-cli-integration.md  cedar-quilt.md  rajee-manifest.md  rale-internal-ops.md
infra/: CLAUDE.md  LOCAL_TESTING.md  cdk.json  docker-compose.yml  test-docker.sh  test-local.sh  tf-outputs.json
infra/blueprints/: README.md  raja-domain-blueprint.yaml  raja-registry-blueprint.yaml
infra/envoy/: Dockerfile  authorize.lua  docker-compose.local.yml  entrypoint.sh  envoy.yaml.tmpl
infra/raja_poc/: app.py
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
lambda_handlers/: CLAUDE.md
lambda_handlers/authorizer/: Dockerfile  app.py  requirements.txt
lambda_handlers/compiler/: handler.py  requirements.txt
lambda_handlers/control_plane/: handler.py  requirements.txt
lambda_handlers/enforcer/: handler.py
lambda_handlers/introspect/: handler.py
lambda_handlers/package_resolver/: __init__.py  handler.py
lambda_handlers/rale_authorizer/: handler.py  requirements.txt
lambda_handlers/rale_router/: handler.py
lambda_handlers/token_service/: handler.py
policies/: admin_full_access.cedar  data_analyst_read.cedar  data_engineer_write.cedar  rajee_integration_test.cedar  rajee_test_policy.cedar  rale_demo_user.cedar  rale_package_grant_test.cedar  schema.cedar
policies/policies/: admin_full.cedar  document_read.cedar  document_write.cedar
scripts/: build-envoy-image.sh  check_ecr_ready.sh  deploy.sh  import_glue_db.py  invoke_compiler.py  load_policies.py  merge_cdk_outputs.py  release.py  sagemaker_gaps.py  seed_config.py  seed_glue_tables.py  seed_packages.py  seed_test_data.py  seed_users.py  show_outputs.py  test-envoy-local.sh  test_all.sh  test_local.py  tf_outputs.py  verify_perf_access.py  version.py
scripts/lf_native_poc/: README.md  __init__.py  create_throwaway_subscriber.py  package_tag_import_poc.py
specs/1-mvp/: 01-mvp-spec.md  03-mvp-design.md  04-poe-tasks.md  07-scripts-analysis.md  08-refactoring-analysis.md
specs/2-rajee/: 01-rajee-gap.md  02-prefix-authorization-design.md  03-rajee-design.md  04-rajee-envoy.md  05-arch-review.md  06-stack-dependency-analysis.md  07-dependency-removal-validation.md  08-authorization-gap-analysis.md  09-envoy-mechanistic-authorization-plan.md  10-local-testing-plan.md  11-enable-auth.md  12-auth-failure-analysis.md  13-authorization-verification.md  14-deployment-optimization-summary.md  14-deployment-optimization.md  16-performance-measurement.md
specs/23-audits/: 01-code-audit.md  01a-code-audit-results.md  02-security-audit.md  02a-security-audit-results.md  03-performance-audit.md  03a-old.md  03a-performance-audit-results.md  03b-live-performance-results.md  03c-live-performance-results.md  03d-live-performance-results.md  03e-live-performance-results.md  03f-live-performance-results.md  04-audit-summary.md
specs/3-schema/: 01-bucket-object.md  02-cedar-impl.md  03-failure-modes.md  04-failure-modes-results.md  05-cedar-testing.md  06-failure-fixes.md  07-enhance-admin.md  08-remaining-work.md  09-cedar-next-IMPLEMENTATION.md  09-cedar-next.md
specs/4-manifest/: 01-package-grant.md  02-package-map.md  03-package-gaps.md  04-package-hardening.md  05-package-more.md  06-demo-coverage.md
specs/46-rale-cli/: 01-cli-flow.md  02-cli-design.md
specs/48-use-sagemaker/: 01-sm-ticket.md  02-sm-setup.md  03-import-glue-db.md  04-tooling-blueprint.md  05-tooling-env.md  06-dynamic-slots.md  07-lf-native-iceberg-catalog.md  08-lf-native-iceberg-catalog-blockers.md  09-lf-native-iceberg-catalog-h1-h2-tests.md
specs/49-domain-ux/: 01-admin-ng.md  02-domain-swap.md  03-domain-tasks.md  04-dedupe-ui.md  05-blueprint.md  06-blueprint-gap-analysis.md  07-environment-fix.md  08-environment-config.md
specs/5-rale/: 01-diwan-stories.md  02-rale-terraform-impl.md  03-admin-app.md  04-rale-explainer.md  05-admin-explainer.md  06-live-tour.md  07-admin-next.md  08-incident-response.md  09-admin-auth.md  10-live-tour-status.md
specs/50-fix-grants/: 01-grant-mystery.md  02-grant-stress-test.md  03-iam-authentication.md
specs/6-validate/: 01-fix-fake-tests.md  02-only-real-code-paths.md
src/raja/: CLAUDE.md  __init__.py  aws_sigv4.py  cli.py  compiler.py  enforcer.py  exceptions.py  manifest.py  models.py  package_map.py  quilt_uri.py  scope.py  token.py
tests/: CLAUDE.md  README.md
tests/hypothesis/: test_compilation.py  test_determinism.py  test_fail_closed.py  test_transparency.py
tests/integration/: helpers.py  test_admin_ui.py  test_control_plane.py  test_end_to_end.py  test_enforcement_service.py  test_failure_modes.py  test_health_and_auth.py  test_package_grant.py  test_package_map.py  test_policy_store.py  test_rajee_envoy_bucket.py  test_rajee_package_grant.py  test_rajee_translation_grant.py  test_rale_cli_live.py  test_rale_end_to_end.py  test_seed_users.py  test_token_service.py
tests/local/: Dockerfile.jwks  generate_test_token.py  mock_jwks_server.py
tests/lua/: authorize_spec.lua
tests/shared/: s3_client.py  token_builder.py
tests/unit/: conftest.py  test_admin_auth.py  test_audit.py  test_authorizer_app.py  test_cedar_parser.py  test_cedar_schema.py  test_cedar_schema_parser.py  test_cedar_schema_validation.py  test_compiler.py  test_compiler_forbid.py  test_compiler_templates.py  test_control_plane_audit.py  test_control_plane_router.py  test_datazone_service.py  test_dependencies.py  test_enforcer.py  test_lf_native_poc.py  test_manifest.py  test_models.py  test_scope.py  (+14 more)
web/: README.md  app.js  config.js  index.html  styles.css
(+59 files in other folders)
