[project]
name = "raja"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dr. Ernie Prabhakar", email = "ernest@quilt.bio" }
]
requires-python = ">=3.12"
dependencies = [
    "awscrt>=0.20.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "PyJWT>=2.8.0",
    "quilt3>=6.3.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "mangum>=0.17.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "poethepoet>=0.24.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.1.0",
    "uvicorn>=0.29.0",
    "boto3-stubs[datazone,secretsmanager]>=1.34.0",
]

aws = [
    "boto3>=1.34.0",
]

test = [
    "moto>=4.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
rale = "raja.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["infra/cdk.out", "infra/cdk.out*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # FastAPI dependency injection pattern (function calls in defaults)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = [
    "ignore:.*key length.*:UserWarning",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: tests that require deployed AWS resources",
    "hypothesis: tests that validate RAJA claims",
    "slow: Slow-running tests",
]

[tool.poe.tasks]
# Clean build artifacts and caches
serve = { shell = "RAJA_ADMIN_KEY=${RAJA_ADMIN_KEY:-dev} uv run --extra dev uvicorn raja.server.app:app --reload --port 8000", help = "Run admin UI locally at http://localhost:8000 (hot-reload on file changes)" }

# Clean build artifacts and caches
clean = { cmd = "bash -c 'rm -rf .pytest_cache .mypy_cache .ruff_cache htmlcov .coverage dist build *.egg-info infra/cdk.out* infra/terraform/.terraform infra/terraform/terraform.tfstate* infra/terraform/build && find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true'", help = "Remove build artifacts, caches, and infra outputs" }

# Quality checks - combine format + lint + typecheck
check = { sequence = ["_format", "_lint-fix", "_typecheck"], help = "Format, lint, and typecheck" }

# Testing
test = { cmd = "bash scripts/test_all.sh", help = "Run all unit tests (Python + Rust + Lua)" }
test-unit = { cmd = "uv run --extra test python -m pytest tests/unit/ -v", help = "Run unit tests only" }
test-cov = { cmd = "uv run --extra test python -m pytest tests/ --cov=src/raja --cov-report=html --cov-report=term", help = "Run tests with coverage" }
coverage = { cmd = "uv run --extra test python -m pytest tests/ --cov=src/raja --cov-report=html --cov-report=term", help = "Run tests with coverage (alias for test-cov)" }
test-docker = { shell = "cd infra && ./test-docker.sh ${action}", args = [{ name = "action", positional = true, default = "up" }], help = "Build and test Docker containers locally (args: up|logs|down|status)" }

# Demo
demo = { cmd = "pytest tests/integration/test_rajee_envoy_bucket.py tests/integration/test_rajee_package_grant.py tests/integration/test_rajee_translation_grant.py -v -s", help = "Run all RAJEE demonstrations: S3 proxy, package grants, and translation grants" }
demo-envoy = { cmd = "pytest tests/integration/test_rajee_envoy_bucket.py -v -s", help = "Run RAJEE Envoy S3 proxy demonstration only" }
demo-package = { cmd = "pytest tests/integration/test_rajee_package_grant.py -v -s", help = "Run package grant (RAJ-package) demonstrations" }
demo-translation = { cmd = "pytest tests/integration/test_rajee_translation_grant.py -v -s", help = "Run translation grant (TAJ-package) demonstrations" }

# AWS deployment
deploy = { sequence = ["_terraform-apply", "_wait-rajee-stable", "_sagemaker-gaps", "_seed-users", "_seed-packages", "_show-outputs"], help = "Deploy standalone RAJA stack, wait for RAJEE, fill V2 gaps, and seed integration fixtures" }
deploy-fast = { sequence = ["deploy"], help = "Alias for Terraform deploy" }
destroy = { sequence = ["_terraform-destroy"], help = "Destroy Terraform stack" }
seed-users = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python -m scripts.seed_users", help = "Seed integration test principals into DataZone" }
seed-packages = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python -m scripts.seed_packages", help = "Seed quilt3 packages into raja-poc-registry from raja-poc-test and publish the DataZone listing" }
sagemaker-gaps = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python scripts/sagemaker_gaps.py", help = "Fill current SageMaker Unified Studio V2 / DataZone Terraform gaps" }

# Docker image building
build-envoy = { cmd = "bash scripts/build-envoy-image.sh", help = "Build Envoy container image locally" }
build-envoy-push = { cmd = "bash scripts/build-envoy-image.sh --push", help = "Build and push Envoy image to ECR" }

# Full workflow - clean + check + test + docker + deploy + integration test
all = { sequence = ["clean", "check", "test-unit", "test-docker", "deploy", "test-integration"], help = "Full workflow: clean, check, test, docker test, deploy, load policies, compile, and run integration tests" }

# Version management
version = { script = "scripts.version:show_version", help = "Show current version" }
bump = { cmd = "python scripts/version.py bump ${part}", args = [{ name = "part", positional = true, default = "patch" }], help = "Bump version and commit (args: patch|minor|major, default: patch)" }
tag = { script = "scripts.version:create_tag", help = "Create and push release tag (runs checks first)" }

# Integration test (kept separate as it requires deployed resources)
test-integration = { shell = "set -a; [ -f .env ] && . ./.env; set +a; if [ -z \"${RAJA_ADMIN_KEY:-}\" ]; then echo \"Missing RAJA_ADMIN_KEY\" >&2; exit 1; fi; uv run --extra test python -m pytest tests/integration/ -v", help = "Run integration tests (requires deployed AWS resources)" }
test-rale-cli = { shell = "set -a; [ -f .env ] && . ./.env; set +a; if [ -z \"${RAJA_ADMIN_KEY:-}\" ]; then echo \"Missing RAJA_ADMIN_KEY\" >&2; exit 1; fi; uv run --extra test python -m pytest tests/integration/test_rale_cli_live.py -v", help = "Run live RALE CLI integration tests (requires deployed AWS resources)" }
test-all = { sequence = ["check", "test", "deploy", "test-integration", "test-rale-cli"], help = "Run linting and tests, deploy, run integration tests, and verify the live RALE CLI flow" }

# Internal tasks (prefixed with _)
_format = { cmd = "uv run --extra dev ruff format src tests infra lambda_handlers", help = "Internal: format code" }
_lint-fix = { cmd = "uv run --extra dev ruff check --fix src tests infra lambda_handlers", help = "Internal: fix lint issues" }
_typecheck = { cmd = "uv run --extra dev mypy src", help = "Internal: run type checker" }
_show-outputs = { cmd = "python scripts/show_outputs.py", help = "Internal: print deployment summary" }
_terraform-apply = { shell = "set -a; [ -f .env ] && . ./.env; set +a; if [ -z \"${RAJA_ADMIN_KEY:-}\" ]; then echo \"Missing RAJA_ADMIN_KEY\" >&2; exit 1; fi; export TF_VAR_raja_admin_key=${RAJA_ADMIN_KEY}; export TF_VAR_raja_default_principal_username=$(python3 -c 'import os; users=[u.strip() for u in os.environ.get(\"RAJA_USERS\", \"\").split(\",\") if u.strip()]; print(users[0] if users else \"\")'); cd infra/terraform && terraform init -input=false && terraform apply -auto-approve -input=false && terraform output -json | python3 -c \"import json,sys; print(json.dumps({k:v['value'] for k,v in json.load(sys.stdin).items()}))\" > ../tf-outputs.json", help = "Internal: deploy Terraform stack and persist outputs" }
_wait-rajee-stable = { shell = "set -a; [ -f .env ] && . ./.env; set +a; aws ecs wait services-stable --cluster raja-standalone-rajee-cluster --services raja-standalone-rajee-service", help = "Internal: wait for the RAJEE ECS service to reach a stable state" }
_sagemaker-gaps = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python scripts/sagemaker_gaps.py", help = "Internal: fill current SageMaker Unified Studio V2 / DataZone Terraform gaps" }
_seed-users = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python -m scripts.seed_users", help = "Internal: seed integration test principals into DataZone" }
_seed-packages = { shell = "set -a; [ -f .env ] && . ./.env; set +a; uv run --extra aws python -m scripts.seed_packages", help = "Internal: seed quilt packages and DataZone listings" }
_terraform-destroy = { shell = "set -a; [ -f .env ] && . ./.env; set +a; if [ -z \"${RAJA_ADMIN_KEY:-}\" ]; then echo \"Missing RAJA_ADMIN_KEY\" >&2; exit 1; fi; export TF_VAR_raja_admin_key=${RAJA_ADMIN_KEY}; export TF_VAR_raja_default_principal_username=$(python3 -c 'import os; users=[u.strip() for u in os.environ.get(\"RAJA_USERS\", \"\").split(\",\") if u.strip()]; print(users[0] if users else \"\")'); cd infra/terraform && terraform init -input=false && terraform destroy -auto-approve -input=false && rm -f ../tf-outputs.json", help = "Internal: destroy Terraform stack" }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "shared.token_builder"
ignore_missing_imports = true
